--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "isbot": "^5.1.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "resend": "^4.1.2",
     "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
