--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "resend": "^4.1.2",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4.0.10"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
@@ -38,7 +39,7 @@
     "@shopify/mini-oxygen": "^3.1.1",
     "@shopify/oxygen-workers-types": "^4.1.2",
     "@shopify/prettier-config": "^1.1.2",
-    "@tailwindcss/vite": "4.0.0-beta.8",
+    "@tailwindcss/vite": "^4.0.0-beta.8",
     "@total-typescript/ts-reset": "^0.4.2",
     "@types/eslint": "^9.6.1",
     "@types/react": "^18.2.22",
